--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -11,7 +11,8 @@
         <!-- <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar> -->
         <mat-tab-group>
           <mat-tab label="Informasi Produk">
-            <div class="ayo-middle p-24" fxLayout="column">
+            <div class="ayo-middle" fxLayout="column">
+              <div class="p-24" fxLayout="column">
               <div *ngIf="!isDetail" class="button" (click)="openDialog()">
                 <div fxLayout="row wrap" fxLayoutAlign="space-between center">
                   <mat-icon class="secondary-text">horizontal_split</mat-icon>
@@ -104,6 +105,77 @@
                   {{item.name}}
                 </mat-radio-button>
               </mat-radio-group>
+              <mat-checkbox (change)="asd($event)" class="ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox>
+            </div>
+              <div class="" formArrayName="areas" *ngFor="let wil of formProductGroup.get('areas')['controls']; let i = index;">
+                <div [formGroupName]="i">
+                  <div class="mb-16 wilayah" fxLayout="row" fxLayoutAlign="space-between center">
+                    <div fxFlex="50"><h3 class="">Geotree {{i+1}}</h3></div>
+                    <div *ngIf="!isDetail" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+                      <button *ngIf="formProductGroup.get('areas').value.length === 1 || i === (formProductGroup.get('areas').value.length - 1)" mat-raised-button type="button" (click)="addArea(i)"><mat-icon>add</mat-icon></button>
+                      <button *ngIf="formProductGroup.get('areas').value.length > 1" mat-raised-button color="primary" type="button" (click)="deleteArea(i)"><mat-icon>delete</mat-icon></button>
+                    </div>
+                  </div>
+                  <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="National" formControlName="national" matTooltip="{{getToolTipData(wil.get('national').value, wil.controls['list_national'].value)}}">
+                        <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['national'].hasError('required') && wil.controls['national'].touched">
+                        National harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="Zone" formControlName="zone" matTooltip="{{getToolTipData(wil.get('zone').value, wil.controls['list_zone'].value)}}" (selectionChange)="generataList('region', wil.get('zone').value, i, 'selection')">
+                        <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['zone'].hasError('required') && wil.controls['zone'].touched">
+                        Zone harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="Regional" formControlName="region" matTooltip="{{getToolTipData(wil.get('region').value, wil.controls['list_region'].value)}}" (selectionChange)="generataList('area', wil.get('region').value, i, 'selection')">
+                        <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['region'].hasError('required') && wil.controls['region'].touched">
+                        Regional harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="Area" formControlName="area" matTooltip="{{getToolTipData(wil.get('area').value, wil.controls['list_area'].value)}}" (selectionChange)="generataList('salespoint', wil.get('area').value, i, 'selection')">
+                        <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['area'].hasError('required') && wil.controls['area'].touched">
+                        Area harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="Salespoint" formControlName="salespoint" matTooltip="{{getToolTipData(wil.get('salespoint').value, wil.controls['list_salespoint'].value)}}" (selectionChange)="generataList('district', wil.get('salespoint').value, i, 'selection')">
+                        <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['salespoint'].hasError('required') && wil.controls['salespoint'].touched">
+                        Salespoint harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="District" formControlName="district" matTooltip="{{getToolTipData(wil.get('district').value, wil.controls['list_district'].value)}}" (selectionChange)="generataList('territory', wil.get('district').value, i, 'selection')">
+                        <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['district'].hasError('required') && wil.controls['district'].touched">
+                        Distrik harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="31%" class="is-light form-primary">
+                      <mat-select placeholder="Territory" formControlName="territory" matTooltip="{{getToolTipData(wil.get('territory').value, wil.controls['list_territory'].value)}}">
+                        <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">{{item.name}}</mat-option>
+                      </mat-select>
+                      <mat-error *ngIf="wil.controls['territory'].hasError('required') && wil.controls['territory'].touched">
+                        Territori harus diisi
+                      </mat-error>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
             </div>
           </mat-tab>
           <mat-tab label="Gambar Produk">
