--- a/src/app/pages/sku-management/product/create/product-create.component.scss
+++ b/src/app/pages/sku-management/product/create/product-create.component.scss
@@ -46,4 +46,10 @@
     vertical-align: middle;
     height: 100%;
   }
+
+  .wilayah {
+    background: #3a3a3a;
+    color: white;
+    padding: 0 24px;
+  }
 }
