--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -13,66 +13,54 @@
           <mat-tab label="Informasi Produk">
             <div class="ayo-middle" fxLayout="column">
               <div class="p-24" fxLayout="column">
-              <div *ngIf="!isDetail" class="button" (click)="openDialog()">
-                <div fxLayout="row wrap" fxLayoutAlign="space-between center">
-                  <mat-icon class="secondary-text">horizontal_split</mat-icon>
-                  <span class="h5 text-center">SCAN BARCODE</span>
+                <div *ngIf="!isDetail" class="button" (click)="openDialog()">
+                  <div fxLayout="row wrap" fxLayoutAlign="space-between center">
+                    <mat-icon class="secondary-text">horizontal_split</mat-icon>
+                    <span class="h5 text-center">SCAN BARCODE</span>
+                  </div>
                 </div>
-              </div>
-              <br>
-
-              <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input matInput type="text" placeholder="Nama Produk" formControlName="name">
-                <mat-error *ngIf="formProductGroup.controls['name'].hasError('required') && formProductGroup.controls['name'].touched">
-                  Nama Produk harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input matInput type="text" placeholder="Barcode" formControlName="barcode" readonly>
-              </mat-form-field>
-              <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-select formControlName="brand" placeholder="Perusahaan" #singleSelect>
-                  <ngx-mat-select-search [formControl]="filterBrand" [placeholderLabel]="'Cari Perusahaan...'"
-                    [noEntriesFoundLabel]="'Tidak ada perusahaan yang ditemukan'"></ngx-mat-select-search>
-                  <mat-option *ngFor="let item of filteredBrand | async" [value]="item.id">
-                    {{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="formProductGroup.controls['brand'].hasError('required') && formProductGroup.controls['brand'].touched">
-                  Perusahaan harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-chip-list #chipList [disabled]="isDetail">
-                  <mat-chip color="primary" *ngFor="let item of formProductGroup.get('alias')['controls']; let i = index;"
-                    [selectable]="selectable" [removable]="removable" (removed)="removeAlias(i)">
-                    {{item.get('alias').value}}
-                    <mat-icon matChipRemove *ngIf="removable && !isDetail">cancel</mat-icon>
-                  </mat-chip>
-                  <input matInput placeholder="Nama Lain Produk" type="text" [matChipInputFor]="chipList"
-                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-                    (matChipInputTokenEnd)="addAlias($event)" [disabled]="isDetail">
-                </mat-chip-list>
-                <mat-error *ngIf="formProductGroup.controls['alias'].hasError('required') && formProductGroup.controls['alias'].touched">
-                  Nama Lain Produk harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-select formControlName="category" placeholder="Kategori Produk" #singleSelect (selectionChange)="selectionChange()">
-                  <ngx-mat-select-search [formControl]="filterCategory" [placeholderLabel]="'Cari Kategori...'"
-                    [noEntriesFoundLabel]="'Tidak ada kategori yang ditemukan'"></ngx-mat-select-search>
-                  <mat-option *ngFor="let item of filteredCategory | async" [value]="item.id">
-                    {{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="formProductGroup.controls['category'].hasError('required') && formProductGroup.controls['category'].touched">
-                  Kategori Produk harus diisi
-                </mat-error>
-              </mat-form-field>
-              <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" class="">
+                <br>
                 <mat-form-field fxFlex="100" class="is-light form-primary">
-                  <mat-select placeholder="Sub Kategori" formControlName="subCategory">
-                    <mat-option [value]="item.id" *ngFor="let item of listSubCategory">
+                  <input matInput type="text" placeholder="Nama Produk" formControlName="name">
+                  <mat-error *ngIf="formProductGroup.controls['name'].hasError('required') && formProductGroup.controls['name'].touched">
+                    Nama Produk harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="100" class="is-light form-primary">
+                  <input matInput type="text" placeholder="Barcode" formControlName="barcode" readonly>
+                </mat-form-field>
+                <mat-form-field fxFlex="100" class="is-light form-primary">
+                  <mat-select formControlName="brand" placeholder="Perusahaan" #singleSelect>
+                    <ngx-mat-select-search [formControl]="filterBrand" [placeholderLabel]="'Cari Perusahaan...'"
+                      [noEntriesFoundLabel]="'Tidak ada perusahaan yang ditemukan'"></ngx-mat-select-search>
+                    <mat-option *ngFor="let item of filteredBrand | async" [value]="item.id">
+                      {{item.name}}
+                    </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="formProductGroup.controls['brand'].hasError('required') && formProductGroup.controls['brand'].touched">
+                    Perusahaan harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="100" class="is-light form-primary">
+                  <mat-chip-list #chipList [disabled]="isDetail">
+                    <mat-chip color="primary" *ngFor="let item of formProductGroup.get('alias')['controls']; let i = index;"
+                      [selectable]="selectable" [removable]="removable" (removed)="removeAlias(i)">
+                      {{item.get('alias').value}}
+                      <mat-icon matChipRemove *ngIf="removable && !isDetail">cancel</mat-icon>
+                    </mat-chip>
+                    <input matInput placeholder="Nama Lain Produk" type="text" [matChipInputFor]="chipList"
+                      [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+                      (matChipInputTokenEnd)="addAlias($event)" [disabled]="isDetail">
+                  </mat-chip-list>
+                  <mat-error *ngIf="formProductGroup.controls['alias'].hasError('required') && formProductGroup.controls['alias'].touched">
+                    Nama Lain Produk harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="100" class="is-light form-primary">
+                  <mat-select formControlName="category" placeholder="Kategori Produk" #singleSelect (selectionChange)="selectionChange()">
+                    <ngx-mat-select-search [formControl]="filterCategory" [placeholderLabel]="'Cari Kategori...'"
+                      [noEntriesFoundLabel]="'Tidak ada kategori yang ditemukan'"></ngx-mat-select-search>
+                    <mat-option *ngFor="let item of filteredCategory | async" [value]="item.id">
                       {{item.name}}
                     </mat-option>
                   </mat-select>
@@ -80,41 +68,55 @@
                     Kategori Produk harus diisi
                   </mat-error>
                 </mat-form-field>
-              </div>
-              <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" class="">
+                <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" class="">
+                  <mat-form-field fxFlex="100" class="is-light form-primary">
+                    <mat-select placeholder="Sub Kategori" formControlName="subCategory">
+                      <mat-option [value]="item.id" *ngFor="let item of listSubCategory">
+                        {{item.name}}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="formProductGroup.controls['category'].hasError('required') && formProductGroup.controls['category'].touched">
+                      Kategori Produk harus diisi
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+                <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" class="">
 
-                <mat-form-field fxFlex="50" class="is-light form-primary">
-                  <mat-select placeholder="UOM" formControlName="packaging">
-                    <mat-option [value]="item.id" *ngFor="let item of listPackaging">
-                      {{item.name}}
-                    </mat-option>
-                  </mat-select>
-                  <mat-error *ngIf="formProductGroup.controls['packaging'].hasError('required') && formProductGroup.controls['packaging'].touched">
-                    Nama UOM harus diisi
-                  </mat-error>
-                </mat-form-field>
-                <!-- <mat-form-field fxFlex="25" class="is-light form-primary">
-                  <input matInput type="number" formControlName="convertion" placeholder="Konversi">
-                </mat-form-field> -->
+                  <mat-form-field fxFlex="50" class="is-light form-primary">
+                    <mat-select placeholder="UOM" formControlName="packaging">
+                      <mat-option [value]="item.id" *ngFor="let item of listPackaging">
+                        {{item.name}}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="formProductGroup.controls['packaging'].hasError('required') && formProductGroup.controls['packaging'].touched">
+                      Nama UOM harus diisi
+                    </mat-error>
+                  </mat-form-field>
+                  <!-- <mat-form-field fxFlex="25" class="is-light form-primary">
+                    <input matInput type="number" formControlName="convertion" placeholder="Konversi">
+                  </mat-form-field> -->
+                </div>
+                <div class="pt-16">
+                  <strong>Status Produk</strong>
+                </div>
+                <mat-radio-group formControlName="status" class="radio-group pb-16">
+                  <mat-radio-button class="radio-button" *ngFor="let item of statusProduk" [value]="item.status">
+                    {{item.name}}
+                  </mat-radio-button>
+                </mat-radio-group>
+                <div class="pt-16">
+                  <strong>Jenis Produk</strong>
+                </div>
+                <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox>
               </div>
-              <div class="pt-16">
-                <strong>Status Produk</strong>
-              </div>
-              <mat-radio-group formControlName="status" class="radio-group pb-16">
-                <mat-radio-button class="radio-button" *ngFor="let item of statusProduk" [value]="item.status">
-                  {{item.name}}
-                </mat-radio-button>
-              </mat-radio-group>
-              <mat-checkbox (change)="asd($event)" class="ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox>
-            </div>
               <div class="" formArrayName="areas" *ngFor="let wil of formProductGroup.get('areas')['controls']; let i = index;">
                 <div [formGroupName]="i">
                   <div class="mb-16 wilayah" fxLayout="row" fxLayoutAlign="space-between center">
                     <div fxFlex="50"><h3 class="">Geotree {{i+1}}</h3></div>
-                    <div *ngIf="!isDetail" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+                    <!-- <div *ngIf="!isDetail" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
                       <button *ngIf="formProductGroup.get('areas').value.length === 1 || i === (formProductGroup.get('areas').value.length - 1)" mat-raised-button type="button" (click)="addArea(i)"><mat-icon>add</mat-icon></button>
                       <button *ngIf="formProductGroup.get('areas').value.length > 1" mat-raised-button color="primary" type="button" (click)="deleteArea(i)"><mat-icon>delete</mat-icon></button>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
