promo src missed css

--- a/src/app/pages/sku-management/product/create/product-create.component.html
+++ b/src/app/pages/sku-management/product/create/product-create.component.html
@@ -138,7 +138,7 @@
                     {{item.name}}
                   </mat-radio-button>
                 </mat-radio-group>
-                <div class="py-16">
+                <div class="pt-16">
                   <strong>Jenis Produk</strong>
                 </div>
                 <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox>
