--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -23,60 +23,103 @@
           <mat-error style="padding-top: 6px !important; font-size: .86em;" *ngIf="formNotification.controls['body'].hasError('required') && formNotification.controls['body'].touched">
             Konten Notifikasi harus diisi
           </mat-error>
-          <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-24" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="National" formControlName="national">
-                <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-              <mat-error *ngIf="formNotification.controls['national'].hasError('required') && formNotification.controls['national'].touched">
-                National harus diisi
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formNotification.get('zone').value)">
-                <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formNotification.get('region').value)">
-                <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formNotification.get('area').value)">
-                <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formNotification.get('salespoint').value)">
-                <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formNotification.get('district').value)">
-                <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Territory" formControlName="territory">
-                <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
+          <div class="" formArrayName="areas" *ngFor="let wil of formNotification.get('areas')['controls']; let i = index;">
+            <div [formGroupName]="i">
+              <!-- <div class="mb-16 wilayah" fxLayout="row" fxLayoutAlign="space-between center">
+                <div fxFlex="50"><h3 class="">&nbsp;</h3></div>
+                <div *ngIf="!isDetail" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+                  <button *ngIf="formNotification.get('areas').value.length === 1 || i === (formNotification.get('areas').value.length - 1)" mat-raised-button type="button" (click)="addArea()"><mat-icon>add</mat-icon></button>
+                  <button *ngIf="formNotification.get('areas').value.length > 1" mat-raised-button color="primary" type="button" (click)="deleteArea(i)"><mat-icon>delete</mat-icon></button>
+                </div>
+              </div> -->
+              <div class="py-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="National" formControlName="national" matTooltip="{{getToolTipData(wil.get('national').value, wil.controls['list_national'].value)}}">
+                    <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['national'].hasError('required') && wil.controls['national'].touched">
+                    National harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="Zone" formControlName="zone" matTooltip="{{getToolTipData(wil.get('zone').value, wil.controls['list_zone'].value)}}" (selectionChange)="generataList('region', wil.get('zone').value, i, 'selection')">
+                    <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['zone'].hasError('required') && wil.controls['zone'].touched">
+                    Zone harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="Regional" formControlName="region" matTooltip="{{getToolTipData(wil.get('region').value, wil.controls['list_region'].value)}}" (selectionChange)="generataList('area', wil.get('region').value, i, 'selection')">
+                    <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['region'].hasError('required') && wil.controls['region'].touched">
+                    Regional harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="Area" formControlName="area" matTooltip="{{getToolTipData(wil.get('area').value, wil.controls['list_area'].value)}}" (selectionChange)="generataList('salespoint', wil.get('area').value, i, 'selection')">
+                    <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['area'].hasError('required') && wil.controls['area'].touched">
+                    Area harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="Salespoint" formControlName="salespoint" matTooltip="{{getToolTipData(wil.get('salespoint').value, wil.controls['list_salespoint'].value)}}" (selectionChange)="generataList('district', wil.get('salespoint').value, i, 'selection')">
+                    <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['salespoint'].hasError('required') && wil.controls['salespoint'].touched">
+                    Salespoint harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="District" formControlName="district" matTooltip="{{getToolTipData(wil.get('district').value, wil.controls['list_district'].value)}}" (selectionChange)="generataList('territory', wil.get('district').value, i, 'selection')">
+                    <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['district'].hasError('required') && wil.controls['district'].touched">
+                    Distrik harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-select placeholder="Territory" formControlName="territory" matTooltip="{{getToolTipData(wil.get('territory').value, wil.controls['list_territory'].value)}}">
+                    <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="wil.controls['territory'].hasError('required') && wil.controls['territory'].touched">
+                    Territori harus diisi
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
           </div>
           <div class="pb-16">
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
-                <strong>Buat Halaman Tujuan?</strong>
+                <strong>Grup Pengguna</strong>
               </h3>
             </div>
-            <mat-radio-group formControlName="static_page" class="radio-group" (change)="changeValue()">
-              <mat-radio-button class="radio-button" *ngFor="let item of createLandingPage" [value]="item.value">
+            <mat-radio-group formControlName="user_group" class="radio-group">
+              <mat-radio-button class="radio-button" *ngFor="let item of listUserGroup" [value]="item.value">
                 {{item.name}}
               </mat-radio-button>
             </mat-radio-group>
           </div>
-          <div class="pt-16 pb-24" *ngIf="formNotification.get('static_page').value === 1">
+
+          <div class="">
+            <div fxLayout="row">
+              <mat-form-field fxFlex="45" class="is-light form-primary">
+                <mat-select formControlName="content_type" placeholder="Tipe Konten" (selectionChange)="contentType(formNotification.get('content_type').value)">
+                  <mat-option *ngFor="let item of listContentType" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="formNotification.controls['content_type'].hasError('required') && formNotification.controls['content_type'].touched">
+                  Tipe Konten harus diisi
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <!-- Static Page -->
+          <div class="pb-24" *ngIf="formNotification.get('content_type').value === 'static_page'">
             <div fxLayout="row">
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <input matInput type="text" formControlName="static_page_title" placeholder="Nama Halaman">
@@ -93,19 +136,59 @@
               Isi Halaman harus diisi
             </mat-error>
           </div>
-          <div class="pb-16">
-            <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
-              <h3 class="">
-                <strong>Grup Pengguna</strong>
-              </h3>
+          
+          <!-- Landing Page -->
+          <div class="" *ngIf="formNotification.get('content_type').value === 'landing_page'">
+            <div fxLayout="row">
+              <mat-form-field fxFlex="45" class="is-light form-primary">
+                <mat-select formControlName="landing_page_value" placeholder="Jenis Landing Page">
+                  <mat-option *ngFor="let item of listLandingPage" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="formNotification.controls['landing_page_value'].hasError('required') && formNotification.controls['landing_page_value'].touched">
+                  Landing Page harus diisi
+                </mat-error>
+              </mat-form-field>
             </div>
-            <mat-radio-group formControlName="user_group" class="radio-group">
-              <mat-radio-button class="radio-button" *ngFor="let item of listUserGroup" [value]="item.value">
-                {{item.name}}
-              </mat-radio-button>
-            </mat-radio-group>
           </div>
 
+          <!-- iframe -->
+          <div class="" *ngIf="formNotification.get('content_type').value === 'iframe'">
+            <div class="" fxLayout="row" fxLayoutAlign="start center">
+              <mat-form-field fxFlex="45" class="is-light form-primary">
+                <input matInput type="url" formControlName="url_iframe" placeholder="URL Link">
+                <mat-error *ngIf="formNotification.controls['url_iframe'].hasError('required') && formNotification.controls['url_iframe'].touched">
+                  URL harus diisi
+                </mat-error>
+                <mat-error *ngIf="formNotification.controls['url_iframe'].invalid && formNotification.get('url_iframe').value !== ''">
+                  URL tidak valid
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <!-- image -->
+          <div class="pb-16" *ngIf="formNotification.get('content_type').value === 'image'" fxLayout="row" fxLayoutAlign="start center">
+            <div fxFlex="30" class="inline-block">
+              <div
+                ngfDrop
+                selectable       = "1"
+                [(validDrag)]    = "validComboDrag"
+                [(file)]        = "imageContentType"
+                accept           = "image/*"
+                class            = "well my-drop-zone"
+                [class.invalid-drag] = "validComboDrag===false"
+                [class.valid-drag]   = "validComboDrag"
+                (fileChange) = "imagesContentType($event)"
+              >
+                Tarik gambar kesini atau <strong>pilih file</strong>
+              </div>
+            </div>
+            <div *ngIf="imageContentType">
+              <div class="mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted" role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span class="preview-image-content" (click)="previewImage()">Lihat gambar</span> <mat-icon matTooltip="Hapus gambar" class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted" matchipremove="" role="img" aria-hidden="true">cancel</mat-icon></div>
+            </div>
+          </div>
+
+          <!-- Consumer -->
           <div class="pb-16" *ngIf="formNotification.controls['user_group'].value === 'customer'">
             <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
