fixing popup notif wholesaler

--- a/src/app/pages/notification/index/notification-index.component.html
+++ b/src/app/pages/notification/index/notification-index.component.html
@@ -2,7 +2,7 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Notifikasi'">
     <div class="button-row" fxLayout="row">
-      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/notifications', 'create']">
+      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/notifications', 'push-notification', 'create']">
         <mat-icon>add</mat-icon>BUAT
       </button>
     </div>
