--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.scss
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.scss
@@ -85,12 +85,13 @@
     &.title {
       color: white;
       position: absolute;
-      top: 20px;
-      left: 10px;
-      width: 215px;
+      top: 30px;
+      left: 17px;
+      width: 190px;
       height: 100px;
-      text-transform: uppercase;
-      font-size: 0.9em;
+      font-weight: 700;
+      // text-transform: uppercase;
+      font-size: 1.1em;
       text-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
 
@@ -98,7 +99,7 @@
       position: absolute;
       top: 140px;
       left: 10px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       font-size: 0.8em;
       height: 38px;
       width: 128px;
@@ -126,12 +127,14 @@
     &.title {
       color: white;
       position: absolute;
-      top: 20px;
-      right: 0;
-      width: 215px;
+      top: 30px;
+      right: 15px;
+      width: 190px;
+      text-align: right;
       height: 100px;
-      text-transform: uppercase;
-      font-size: 0.9em;
+      font-weight: 700;
+      // text-transform: uppercase;
+      font-size: 1.1em;
       text-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
 
@@ -139,7 +142,7 @@
       position: absolute;
       top: 140px;
       right: 20px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       font-size: 0.8em;
       height: 38px;
       width: 128px;
@@ -167,12 +170,14 @@
     &.title {
       color: white;
       position: absolute;
-      top: 146px;
-      left: 10px;
-      width: 235px;
-      /* height: 100px; */
-      text-transform: uppercase;
-      font-size: 0.8em;
+      top: 30px;
+      right: 15px;
+      width: 190px;
+      text-align: right;
+      font-weight: 700;
+      height: 100px;
+      // text-transform: uppercase;
+      font-size: 1.1em;
       text-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
 
@@ -180,7 +185,7 @@
       position: absolute;
       top: 140px;
       right: 10px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       font-size: 0.8em;
       height: 38px;
       width: 128px;
@@ -208,12 +213,13 @@
     &.title {
       color: white;
       position: absolute;
-      top: 130px;
-      left: 10px;
-      width: 215px;
+      top: 30px;
+      left: 17px;
+      width: 190px;
+      font-weight: 700;
       /* height: 100px; */
-      text-transform: uppercase;
-      font-size: 0.9em;
+      // text-transform: uppercase;
+      font-size: 1.1em;
       text-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
 
@@ -221,7 +227,7 @@
       position: absolute;
       top: 140px;
       right: 10px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       font-size: 0.8em;
       height: 38px;
       width: 128px;
@@ -249,12 +255,13 @@
     &.title {
       color: white;
       position: absolute;
-      top: 20px;
-      left: 190px;
+      top: 30px;
+      left: 17px;
       width: 190px;
+      font-weight: 700;
       /* height: 100px; */
-      text-transform: uppercase;
-      font-size: 0.9em;
+      // text-transform: uppercase;
+      font-size: 1.1em;
       text-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
 
@@ -262,7 +269,7 @@
       position: absolute;
       top: 90px;
       left: 190px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       font-size: 0.8em;
       height: 38px;
       width: 128px;
