integrate service paguyuban

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<ng-progress 
+  [positionUsing]="'marginLeft'" 
+  [minimum]="0.15" 
+  [maximum]="1" 
+  [showSpinner]="false" 
+  [color]="'#ff0000'" 
+  [thick]="false" 
+  [ease]="'linear'">
+</ng-progress>
 <fuse-main></fuse-main>
